# pixlstash

./: .dockerignore  .gitignore  BRANDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.demo  Dockerfile.gpu  FRONTEND_TODO.txt  LICENSE  MANIFEST.in  MANY_TO_MANY_MIGRATION.md  PRIVACY.md  README.md  SECURITY.md  TODO.txt  comfyu-integration.txt  docker-entrypoint.sh  expected_results.csv  fly.toml  likeness_fixes.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: copilot-instructions.md
docs/: ai-toolkit-dataset-integration.md  backend_architecture.md  demo-holiday-mode.md  desktop-backend-migration.md  fly-demo-deployment.md  frontend_architecture.md  integration_architecture.md  licensing.md  playwright.md  regular-tests.md  release-test-plan.md  ssl-setup.md
electron/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
frontend/: .npmrc  LICENSE  eslint.config.js  package-lock.json  package.json  playwright.config.js  playwright.screenshots.config.js  vite.config.js
holiday/: Dockerfile  fly.holiday.toml  nginx.conf
metrics/: history.json
pictures/: scores.txt
pixelurgy_vault/: TODO.txt  character.py  characters.py  cli.py  database.py  logging.py  picture.py  picture_iteration.py  picture_iterations.py  picture_quality.py  picture_tagger.py  picture_utils.py  pictures.py  server.py  tag_naturaliser.py  vault.py  vault_upgrade.py
pixlstash/: CLA.md  app.py  auth.py  database.py  event_types.py  image_loading_dataset_prepper.py  picture_scoring.py  picture_tagger.py  pixl_logging.py  server.py  stacking.py  startup_checks.py  tag_naturaliser.py  task_runner.py  vault.py  work_planner.py  worker_config.py
pixlvault/: app.py  auth.py  characters.py  database.py  description_task.py  event_types.py  face_character_likeness_worker.py  face_extraction_worker.py  face_likeness_worker.py  facial_features_worker.py  feature_extraction_worker.py  feature_tag_blacklist.py  image_embedding_worker.py  likeness_worker.py  picture.py  picture_faces.py  picture_likeness.py  picture_quality.py  picture_scoring.py  picture_service_utils.py  picture_sets.py  picture_stack_utils.py  picture_tagger.py  picture_utils.py  pictures.py  quality_worker.py  schema_version.py  server.py  smart_score_scrapheap_worker.py  tag_naturaliser.py  tag_worker.py  task_runner.py  utils.py  vault.py  vault_upgrade.py  work_planner.py  worker_registry.py
scripts/: back-to-work.sh  backfill_snapshot_hashes.py  backfill_tag_predictions.py  benchmark_tagger.py  build_desktop.sh  build_desktop_runtime.py  cleanup_orphaned_reference_pictures.py  evaluate_custom_tagger.py  fetch_pixlstash.py  find_orphaned_files.py  generate_clipiqa_prompts.py  generate_openapi_docs.py  holiday-mode.sh  near_neighbor_label_disagreement.py  plot_smart_score_distribution.py  (+11 more)
(+734 files in other folders)
