[project]
name = "pixlstash"
version = "1.0.0rc10"
description = "Self-hosted picture library with AI tagging, semantic search, and a clean web UI"
readme = "README.md"
license = "GPL-3.0-only AND MIT"
license-files = [
  "pixlstash/LICENSE",
  "frontend/LICENSE",
]
authors = [
    { name = "Gaute Lindkvist" }
]
keywords = [
    "image library",
    "AI tagging",
    "semantic search",
    "photo management",
    "self-hosted",
    "comfyui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "open_clip_torch>=3.3.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "uvicorn[standard]>=0.41.0",
    "setuptools>=42",
    "wheel>=0.46.3",
    "twine>=6.2.0",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "platformdirs>=4.9.4",
    "tomli>=2.4.0",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "onnxruntime>=1.24.3",
    "requests>=2.32.5",
    "accelerate~=1.13",
    "transformers~=5.3",
    "torch~=2.10",
    "torchvision~=0.25",
    "insightface>=0.7.3",
    "rapidfuzz>=3.14.3",
    "tqdm>=4.67.3",
    "einops>=0.8.2",
    "sentence_transformers~=5.2",
    "spacy>=3.8.11",
    "pillow-heif>=1.3.0",
    "sqlmodel>=0.0.37",
    "alembic>=1.18.4",
    "python-jose[cryptography]>=3.5.0",
    "dotenv>=0.9.9",
    "passlib>=1.7.4",
    "bcrypt>=3.2.2,<4.0.0",
    "nvidia-ml-py>=13.590.48",
    "piexif>=1.1.3",
]

[project.urls]
Homepage = "https://pikselkroken.github.io/pixlstash"
Repository = "https://github.com/pikselkroken/pixlstash"
"Bug Tracker" = "https://github.com/pikselkroken/pixlstash/issues"
Changelog = "https://github.com/pikselkroken/pixlstash/releases"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "psutil"
]
dev = [
    "ruff"
]

[project.scripts]
pixlstash-server = "pixlstash.app:main"

[build-system]
requires = ["setuptools>=42", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pixlstash*"]

[tool.setuptools.package-data]
pixlstash = [
    "alembic.ini",
    "frontend/dist/**/*",
    "migrations/*.py",
    "migrations/*.mako",
    "migrations/versions/*.py",
    "image_plugins/built-in/*.py",
    "data/anchors/*.npy",
    "data/comfyui-workflows/built-in/*.json",
]
